--- a/css/home.css
+++ b/css/home.css
@@ -131,7 +131,7 @@ html, body {
   padding: 0;
 }
 .hideme {opacity: 0;}
-.hideme-slide, .hideme-slide2 {opacity: 0; bottom: -100% !important;}
+.hideme-slide {opacity: 0; bottom: -100% !important;}
 .dontHide {
   -webkit-transition: all 1s ease-in-out;
   -moz-transition: all 1s ease-in-out;
@@ -1102,7 +1102,7 @@ html, body {
 /* Anything smaller than 975 pixels (devices and browsers) */
 @media only screen and (max-width: 975px) {
   .hideme, .horizontal-line {opacity: 1;}
-  .parallax .hideme-slide, .parallax .hideme-slide2 {bottom: 0 !important; opacity: 1 !important;}
+  .parallax .hideme-slide {bottom: 0 !important; opacity: 1 !important;}
   .menu {display: none;}
   .jump-menu {display: block;}
   .main-title {height: 350px;top: 50%; margin-top:-175px;}
@@ -1187,7 +1187,6 @@ html, body {
 /* Mobile portrait size to mobile landscape size (devices and browsers) */
 @media only screen and (max-width: 479px) {
   .hideme {opacity: 1;}
-  .hideme-slide {opacity: 1; bottom: auto !important;}
   .title-container {width: 90%;}
   .main-title {height: 300px; top: 50%; margin-top: -150px;}
   .logo {margin-left: 20px;}
