Preload check.png so there is no delay when div is opened.

--- a/css/home.css
+++ b/css/home.css
@@ -8,6 +8,12 @@ body {
   line-height: 1.4;
 }
 
+/* Preload assets here. */
+body:after {
+  display: none;
+  content: url(/img/check.png);
+}
+
 /* Remove the gap between images and the bottom of their containers: h5bp.com/i/440 */
 img {
   vertical-align: middle;
