Added Facebook internship to the experience section.

--- a/css/home.css
+++ b/css/home.css
@@ -942,7 +942,7 @@ html, body {
   width: 100%;
   text-align: center;
 }
-.work-exp-right-0, .work-exp-left-1, .work-exp-right-1, .work-exp-left-2, .work-exp-right-2 {
+.work-exp-left-0, .work-exp-right-0, .work-exp-left-1, .work-exp-right-1, .work-exp-left-2, .work-exp-right-2 {
   display: block;
   left: 0;
   right: 0;
@@ -1162,7 +1162,7 @@ html, body {
 @media only screen and (max-width: 795px) {
   .main-title ul {margin-top: 0; height: 80px; font-size: 35px;}
   .main-title .spacer {margin: 20px auto;}
-  .work-exp-right-0, .work-exp-left-1, .work-exp-right-1, .work-exp-left-2, .work-exp-right-2 {width: 100%; margin-left: 0;}
+  .work-exp-left-0, .work-exp-right-0, .work-exp-left-1, .work-exp-right-1, .work-exp-left-2, .work-exp-right-2 {width: 100%; margin-left: 0;}
 }
 
 /* Mobile landscape size to tablet portrait (devices and browsers) */
