Updated project description styling.

--- a/css/home.css
+++ b/css/home.css
@@ -809,6 +809,7 @@ html, body {
   color: #646464;
   font-size: 14px;
   font-family: 'Open Sans', sans-serif;
+  line-height: 1.5em;
   margin-top: 55px;
 }
 .title-project {
