--- a/css/home.css
+++ b/css/home.css
@@ -30,8 +30,6 @@ textarea {
   background-color: transparent;
   border: 0;
   overflow: hidden;
-  /* IE 6/7 fallback */
-  *text-indent: -9999px;
 }
 .ir:before {
   content: "";
@@ -56,83 +54,16 @@ textarea {
 .clearfix:after {
   clear: both;
 }
-/* For IE 6/7 only - Include this rule to trigger hasLayout and contain floats. */
-.clearfix {
-  *zoom: 1;
-}
-
-@media print,
-(-webkit-min-device-pixel-ratio: 1.25),
-(min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
-
-/********* Print styles. Inlined to avoid required HTTP connection: h5bp.com/r *********/
-@media print {
-  * {
-    background: transparent !important;
-    color: #000 !important; /* Black prints faster: h5bp.com/s */
-    box-shadow: none !important;
-    text-shadow: none !important;
-  }
-
-  a, a:visited {
-    text-decoration: underline;
-  }
-
-  a[href]:after {
-    content: " (" attr(href) ")";
-  }
-
-  abbr[title]:after {
-    content: " (" attr(title) ")";
-  }
-
-  /* Don't show links for images, or javascript/internal links. */
-  .ir a:after,
-  a[href^="javascript:"]:after,
-  a[href^="#"]:after {
-    content: "";
-  }
-
-  tr, img {
-    page-break-inside: avoid;
-  }
-
-  img {
-    max-width: 100% !important;
-  }
-
-  @page {
-    margin: 0.5cm;
-  }
-
-  p {
-    orphans: 3;
-    widows: 3;
-  }
-
-  h2, h3 {
-    orphans: 3;
-    widows: 3;
-    page-break-after: avoid;
-  }
-}
 
 ::-moz-selection {
   background-color: #77be32;
   color: #fff;
 }
-
 ::selection {
   background-color: #77be32;
   color: #fff;
 }
-::-moz-selection {
-  background-color: #77be32;
-  color: #fff;
-  text-shadow: none;
-}
+
 html, body {
   background: #000;
   width: 100%;
@@ -200,6 +131,12 @@ html, body {
   50% {bottom: 60px;}
   100% {bottom: 40px;}
 }
+@keyframes bounce {
+  0% {bottom: 45px;}
+  25%, 75% {bottom: 55px;}
+  50% {bottom: 60px;}
+  100% {bottom: 40px;}
+}
 .welcome {
   font-family: Georgia, "Times New Roman", Times, serif;
   font-style: italic;
@@ -208,7 +145,7 @@ html, body {
   text-transform: none;
 }
 
-/* Pre-load */
+/* Preload */
 #home {height: 100%;}
 .header {
   width: 100%;
@@ -341,7 +278,7 @@ html, body {
   -webkit-transition-timing-function: ease;
 }
 
-/* Featured Works Caroussel */
+/* Featured Works Carousel */
 .content {
   position: relative;
 }
@@ -545,7 +482,6 @@ html, body {
   height: 44px;
   text-align: center;
   line-height: 44px;
-  zoom: 1;
   filter: alpha(opacity=0);
   opacity: 0;
   background: url(/img/color-icons.png) no-repeat;
@@ -556,7 +492,6 @@ html, body {
 .nav-arrows .close {
   background-position: -264px bottom;
   border: none;
-  border-radius: none;
 }
 .nav-arrows .next-button {background-position: right bottom;}
 .nav-arrows .prev-button {background-position: -218px bottom;}
@@ -892,7 +827,7 @@ html, body {
   right: -0.313em;
 }
 
-/* first level */
+/* First Level */
 #navbar > ul {
   height: 3.75em;
   background-color: #f5f5f5;
@@ -917,7 +852,7 @@ html, body {
   color: #333;
 }
 
-/* second level */
+/* Second Level */
 #navbar li ul {
   background-color: #cc470d;
   display: none;
